# mdbook-diagrams

./: Cargo.toml  README.md
examples/html-mermaid/: book.toml
examples/html-mermaid/src/: chapter1.md
examples/latex-plantuml/: .gitignore  book.toml
examples/latex-plantuml/src/: SUMMARY.md  chapter1.md
src/: cli.rs  lib.rs  main.rs  process.rs
